# uniffi-bindgen-cs

bindgen/: Cargo.toml
bindgen/src/: lib.rs
bindgen/src/gen_cs/: compounds.rs  mod.rs
bindgen/templates/: CallbackInterfaceTemplate.cs  EnumTemplate.cs  ErrorTemplate.cs  ObjectRuntime.cs  ObjectTemplate.cs  RecordTemplate.cs  SequenceTemplate.cs  TopLevelFunctionTemplate.cs  macros.cs  wrapper.cs
fixtures/: Cargo.toml
fixtures/custom-types-builtin/: Cargo.toml
fixtures/disposable/: Cargo.toml
fixtures/global-methods-class-name/: Cargo.toml
fixtures/src/: lib.rs
