[package]
name = "uniffi-cs-custom-types-builtin"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_cs_custom_types_builtin"

[dependencies]
once_cell = "1.12"
paste = "1.0"
thiserror = "1.0"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "68b14c95a653b8da3a57b8417d1142bd190eac38", features=["build"] }
uniffi_macros = { git = "https://github.com/mozilla/uniffi-rs", rev = "68b14c95a653b8da3a57b8417d1142bd190eac38" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "68b14c95a653b8da3a57b8417d1142bd190eac38", features=["bindgen-tests"] }
