[package]
name = "uniffi-cs-disposable-fixture"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_cs_disposable"

[dependencies]
once_cell = "1.12"
thiserror = "1.0"
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs", rev = "de1e773204d0ddcda58faac0a77570f1f8056679", features=["build"]}
uniffi_macros = { git = "https://github.com/NordSecurity/uniffi-rs", rev = "de1e773204d0ddcda58faac0a77570f1f8056679"}

[build-dependencies]
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs", rev = "de1e773204d0ddcda58faac0a77570f1f8056679", features=["bindgen-tests"]}
