[package]
name = "uniffi-cs-disposable-fixture"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_cs_disposable"

[dependencies]
once_cell = "1.12"
thiserror = "1.0"
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features=["build"]}
uniffi_macros = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4"}

[build-dependencies]
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features=["bindgen-tests"]}
