[package]
name = "global-methods-class-name"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "global_methods_class_name"

[dependencies]
once_cell = "1.12"
thiserror = "1.0"
uniffi = {git = "https://github.com/mozilla/uniffi-rs", rev = "68b14c95a653b8da3a57b8417d1142bd190eac38", features=["build"]}
uniffi_macros = {git = "https://github.com/mozilla/uniffi-rs", rev = "68b14c95a653b8da3a57b8417d1142bd190eac38"}

[build-dependencies]
uniffi = {git = "https://github.com/mozilla/uniffi-rs", rev = "68b14c95a653b8da3a57b8417d1142bd190eac38", features=["bindgen-tests"]}
