[package]
name = "global-methods-class-name"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "global_methods_class_name"

[dependencies]
once_cell = "1.12"
thiserror = "1.0"
uniffi = {git = "https://github.com/mozilla/uniffi-rs", tag = "v0.25.3", features=["build"]}
uniffi_macros = {git = "https://github.com/mozilla/uniffi-rs", tag = "v0.25.3"}

[build-dependencies]
uniffi = {git = "https://github.com/mozilla/uniffi-rs", tag = "v0.25.3", features=["bindgen-tests"]}
